--- a/install/scripts/forseti.cronjob.template.yaml
+++ b/install/scripts/forseti.cronjob.template.yaml
@@ -16,7 +16,7 @@ spec:
             - name: forseti
               image: ${FORSETI_IMAGE}
               command: ["/forseti-security/install/scripts/docker_entrypoint.sh",
-                        "--bucket", "${BUCKET}",
+                        "--bucket", "${SERVER_BUCKET}",
                         "--log_level", "debug",
                         "--run_server",
                         "--services", "scanner model inventory explain notifier",
