--- a/rules/kms_rules.yaml
+++ b/rules/kms_rules.yaml
@@ -42,17 +42,16 @@
 
 rules:
   - name: All cryptographic keys should be rotated in 100 days
-    mode: blacklist
+    mode: whitelist
     resource:
       - type: organization
         resource_ids:
           - '*'
     key:
        - rotation_period: 100 #days
-       - algorithms:
+         algorithms:
          - GOOGLE_SYMMETRIC_ENCRYPTION
-         - XYZ
-         protection_level: HSM
+         protection_level: SOFTWARE
          purpose: symmetric
          state:
          - ENABLED
