Update forseti.cronjob.template.yaml Change secretName

--- a/install/scripts/forseti.cronjob.template.yaml
+++ b/install/scripts/forseti.cronjob.template.yaml
@@ -11,12 +11,12 @@ spec:
           volumes:
             - name: google-cloud-key
               secret:
-                secretName: credentials
+                secretName: server-credentials
           containers:
             - name: forseti
               image: ${FORSETI_IMAGE}
               command: ["/forseti-security/install/scripts/docker_entrypoint.sh",
-                        "--bucket", "${BUCKET}",
+                        "--bucket", "${SERVER_BUCKET}",
                         "--log_level", "debug",
                         "--run_server",
                         "--services", "scanner model inventory explain notifier",
