--- a/install/docker/cloudbuild.yaml
+++ b/install/docker/cloudbuild.yaml
@@ -24,13 +24,13 @@ steps:
   # This step will fail first time a user builds as the base image doesn't exist
   # There is a hack workaround for first time use case
   # ref. https://github.com/GoogleCloudPlatform/cloud-builders/issues/253
-  # but for now let user comment this out if needed.
-- name: 'gcr.io/cloud-builders/docker'
-  args: ['pull', 'gcr.io/$PROJECT_ID/forseti-base:latest']
+  # but for now let user comment this in/out if needed.
+#- name: 'gcr.io/cloud-builders/docker'
+#  args: ['pull', 'gcr.io/$PROJECT_ID/forseti-base:latest']
   # Hack to work even when no base exists. Todo verify and test it works.
   #args: [ '-c', '|', 'docker pull gcr.io/$PROJECT_ID/forseti-base:latest', '||', 'exit 0']
-  waitFor: ['-']
-  id: pull-base-for-cache
+#  waitFor: ['-']
+#  id: pull-base-for-cache
 
 - name: 'gcr.io/cloud-builders/docker'
   args:
@@ -40,8 +40,7 @@ steps:
   - '--cache-from'
   - 'gcr.io/$PROJECT_ID/forseti-base:latest'
   - '.'
-  waitFor: ['pull-base-for-cache']  # Comment this out if commented out cache step
-  # waitFor: ['-']                  # Uncomment this if commented out cache step
+  waitFor: ['-']
   id: base
 
 - name: 'gcr.io/cloud-builders/docker'
