--- a/install/scripts/forseti.cronjob.template.yaml
+++ b/install/scripts/forseti.cronjob.template.yaml
@@ -22,8 +22,8 @@ spec:
                         "--services", "scanner model inventory explain notifier",
                         "--run_cronjob" ]
               securityContext:
-                runAsUser: 0  # root user
-                allowPrivilegeEscalation: true
+                runAsUser: 0  # root user. TODO use 1, non-root as soon as practical
+                allowPrivilegeEscalation: false
               volumeMounts:
                 - name: google-cloud-key
                   mountPath: /var/secrets/google
