--- a/install/scripts/forseti.cronjob.template.yaml
+++ b/install/scripts/forseti.cronjob.template.yaml
@@ -19,7 +19,7 @@ spec:
                         "--bucket", "${SERVER_BUCKET}",
                         "--log_level", "debug",
                         "--run_server",
-                        "--services", "scanner model inventory explain notifier",
+                        "--services", "scanner model inventory notifier",
                         "--run_cronjob" ]
               securityContext:
                 runAsUser: 0  # root user. TODO use 1, non-root as soon as practical
