--- a/install/scripts/forseti.cronjob.template.yaml
+++ b/install/scripts/forseti.cronjob.template.yaml
@@ -20,7 +20,7 @@ spec:
                         "--log_level", "debug",
                         "--run_server",
                         "--services", "scanner model inventory notifier",
-                        "--run_cronjob" ]
+                        "--run_k8s_cronjob" ]
               securityContext:
                 runAsUser: 0  # root user. TODO use 1, non-root as soon as practical
                 allowPrivilegeEscalation: false
