--- a/install/scripts/forseti.cronjob.template.yaml
+++ b/install/scripts/forseti.cronjob.template.yaml
@@ -18,12 +18,11 @@ spec:
               command: ["/forseti-security/install/scripts/docker_entrypoint.sh",
                         "--bucket", "${SERVER_BUCKET}",
                         "--log_level", "debug",
-                        "--run_server",
                         "--services", "scanner model inventory notifier",
                         "--run_k8s_cronjob" ]
               securityContext:
                 runAsUser: 0  # root user. TODO use 1, non-root as soon as practical
-                allowPrivilegeEscalation: false
+                allowPrivilegeEscalation: true # TODO use false as soon as practical
               volumeMounts:
                 - name: google-cloud-key
                   mountPath: /var/secrets/google
