--- a/install/scripts/forseti.server.template.yaml
+++ b/install/scripts/forseti.server.template.yaml
@@ -29,7 +29,7 @@ spec:
                     "--cron_schedule", "${CRON_SCHEDULE}"]
           securityContext:
             runAsUser: 0  # root user. TODO use 1, non-root as soon as practical
-            allowPrivilegeEscalation: false
+            allowPrivilegeEscalation: true # TODO use false as soon as practical
           volumeMounts:
             - name: google-cloud-key
               mountPath: /var/secrets/google
