updated purpose use case

--- a/rules/kms_rules.yaml
+++ b/rules/kms_rules.yaml
@@ -52,6 +52,7 @@ rules:
          algorithms:
          - GOOGLE_SYMMETRIC_ENCRYPTION
          protection_level: SOFTWARE
-         purpose: symmetric
+         purpose:
+         - ENCRYPT_DECRYPT
          state:
          - ENABLED
