added whitelist test case

--- a/rules/kms_rules.yaml
+++ b/rules/kms_rules.yaml
@@ -41,7 +41,7 @@
 # not compared.
 
 rules:
-  - name: All cryptographic keys should be rotated in 100 days
+  - name: All crypto keys with following config should be rotated in 100 days
     mode: whitelist
     resource:
       - type: organization
