Added 4 use cases to the initial KMS Scanner (#2584)
* testing ssh token

* Added 4 use cases for KMS Scanner

* Removed unintended change

* minor fixes

* added test case

* added test cases for new rules

* updated purpose use case

* added whitelist test case

--- a/rules/kms_rules.yaml
+++ b/rules/kms_rules.yaml
@@ -41,13 +41,18 @@
 # not compared.
 
 rules:
-  - name: All cryptographic keys should be rotated in 100 days
-    mode: blacklist
+  - name: All crypto keys with following config should be rotated in 100 days
+    mode: whitelist
     resource:
       - type: organization
         resource_ids:
           - '*'
     key:
-      - rotation_period: 100 #days
-
-
+       - rotation_period: 100 #days
+         algorithms:
+         - GOOGLE_SYMMETRIC_ENCRYPTION
+         protection_level: SOFTWARE
+         purpose:
+         - ENCRYPT_DECRYPT
+         state:
+         - ENABLED
