Rename client key file

--- a/install/scripts/forseti.client.template.yaml
+++ b/install/scripts/forseti.client.template.yaml
@@ -31,4 +31,4 @@ spec:
               readOnly: true
           env:
             - name: GOOGLE_APPLICATION_CREDENTIALS
-              value: /var/secrets/google/key.json
+              value: /var/secrets/google/client_key.json
