--- a/install/docker/cloudbuild.yaml
+++ b/install/docker/cloudbuild.yaml
@@ -20,27 +20,23 @@
 
 
 steps:
-  # Cache base image, ref. https://cloud.google.com/cloud-build/docs/speeding-up-builds
-  # This step will fail first time a user builds as the base image doesn't exist
-  # There is a hack workaround for first time use case
+  # Optionally cache base image
+  # ref. https://cloud.google.com/cloud-build/docs/speeding-up-builds
   # ref. https://github.com/GoogleCloudPlatform/cloud-builders/issues/253
-  # but for now let user comment this in/out if needed.
-#- name: 'gcr.io/cloud-builders/docker'
-#  args: ['pull', 'gcr.io/$PROJECT_ID/forseti-base:latest']
-  # Hack to work even when no base exists. Todo verify and test it works.
-  #args: [ '-c', '|', 'docker pull gcr.io/$PROJECT_ID/forseti-base:latest', '||', 'exit 0']
-#  waitFor: ['-']
-#  id: pull-base-for-cache
+- name: 'gcr.io/cloud-builders/docker'
+  args: [ '-c', '|', 'docker pull gcr.io/$PROJECT_ID/forseti-base:latest', '||', 'exit 0']
+  waitFor: ['-']
+  id: pull-base-for-cache
 
 - name: 'gcr.io/cloud-builders/docker'
   args:
   - 'build'
   - '--file=install/docker/base'
   - '--tag=gcr.io/$PROJECT_ID/forseti-base'
-#  - '--cache-from'
-#  - 'gcr.io/$PROJECT_ID/forseti-base:latest'
+  - '--cache-from'
+  - 'gcr.io/$PROJECT_ID/forseti-base:latest'
   - '.'
-  waitFor: ['-']
+  waitFor: ['pull-base-for-cache']
   id: base
 
 - name: 'gcr.io/cloud-builders/docker'
