--- a/install/scripts/forseti.client.template.yaml
+++ b/install/scripts/forseti.client.template.yaml
@@ -23,8 +23,8 @@ spec:
                     "--bucket", "${CLIENT_BUCKET}",
                     "--run_client"]
           securityContext:
-            runAsUser: 0  # root user. TODO use 1, non-root as soon as practical
-            allowPrivilegeEscalation: true # TODO use false as soon as practical
+            runAsUser: 0  # root user. TODO use non-root as soon as practical
+            allowPrivilegeEscalation: false
           volumeMounts:
             - name: google-cloud-key
               mountPath: /var/secrets/google
