--- a/install/scripts/forseti.cronjob.template.yaml
+++ b/install/scripts/forseti.cronjob.template.yaml
@@ -21,8 +21,8 @@ spec:
                         "--services", "scanner model inventory notifier",
                         "--run_k8s_cronjob" ]
               securityContext:
-                runAsUser: 0  # root user. TODO use 1, non-root as soon as practical
-                allowPrivilegeEscalation: true # TODO use false as soon as practical
+                runAsUser: 0  # root user. TODO use non-root as soon as practical
+                allowPrivilegeEscalation: false
               volumeMounts:
                 - name: google-cloud-key
                   mountPath: /var/secrets/google
