--- a/install/scripts/forseti.server.template.yaml
+++ b/install/scripts/forseti.server.template.yaml
@@ -28,8 +28,8 @@ spec:
                     "--services", "scanner model inventory explain notifier",
                     "--cron_schedule", "${CRON_SCHEDULE}"]
           securityContext:
-            runAsUser: 0  # root user. TODO use 1, non-root as soon as practical
-            allowPrivilegeEscalation: true # TODO use false as soon as practical
+            runAsUser: 0  # root user. TODO non-root as soon as practical
+            allowPrivilegeEscalation: false
           volumeMounts:
             - name: google-cloud-key
               mountPath: /var/secrets/google
