updated config file and violation map

--- a/configs/server/forseti_conf_server.yaml.in
+++ b/configs/server/forseti_conf_server.yaml.in
@@ -217,6 +217,8 @@ scanner:
           enabled: true
         - name: forwarding_rule
           enabled: false
+        - name: gcv_scanner
+          enabled: false
         - name: group
           enabled: true
         - name: iam_policy
@@ -399,6 +401,18 @@ notifier:
                 gcs_path: gs://{FORSETI_BUCKET}/scanner_violations
 
         - resource: kms_violations
+          should_notify: true
+          notifiers:
+            # Email violations
+            - name: email_violations
+            # Upload violations to GCS.
+            - name: gcs_violations
+              configuration:
+                data_format: csv
+                # gcs_path should begin with "gs://"
+                gcs_path: gs://{FORSETI_BUCKET}/scanner_violations
+
+        - resource: gcv_violations
           should_notify: true
           notifiers:
             # Email violations
