Run Forseti in Docker on Kubernetes or Container-Optimized OS (Proof of Concept) (#2335)
* Merge all docker related changes to this branch.

* Fix entrypoint filename

* Add.dockerignore

* Update docker_entrpoint.sh comments and forseti dockerfile comments.

* adding back the missing entrypoint...

* removing the &

* docker-poc (#2344)

* Add Docker entrypoint script to start Forseti Server in a container

* Merge all docker related changes to this branch.

* Fix entrypoint filename

* Add.dockerignore

* Update docker_entrpoint.sh comments and forseti dockerfile comments.

* Update docker_entrpoint.sh Add new line at end of file.

* Update docker_entrypoint.sh

Add gsutil -DD debug flag

* Update docker_entrypoint.sh

Set forseti server log level to debug

* Update docker_entrypoint.sh

Remove & from forseti server command. Don't run it as background task.

* Add poc k8s_setup_forseti.sh and forseti.template.yaml

* Update comment in k8s_setup_forseti.sh

* Update k8s_setup_forseti.sh

* Add cos_setup_forseti.sh for proof of concept

* Updated k8s_setup_forseti.sh, added newline at end of file

* Update docker_entrypoint.sh

Modified comments

* Update .dockerignore. Added .git and .dockerignore entries.

* Update to enable CronJob on k8s

* Fix last line in k8s_setup_forseti.sh

* wait 60s after starting server before running rest of job

* Wait 60s after starting service to allow for it to fully start

* Update forseti.template.yaml

* docker_entrypoint.sh Wait 10s after servers start
forseti.template.yaml Cloud SQL v1.13, never allow concurrent cronjob

* Cloud SQL latest tag. Remove debugging.

* Fix cloud sql connection string

* Run forseti server as a background task

* Temporarily add set -x for debugging

* Modify forseti notifier run call

* Refactor Cloud SQL Proxy to run as k8s service instead of a sidecar

* Refactor Cloud SQL Proxy as k8s service instead of sidecar

* U

--- a/install/docker/cloudbuild.yaml
+++ b/install/docker/cloudbuild.yaml
@@ -17,24 +17,43 @@
 # Example invocation:
 #   gcloud container builds submit --config scripts/docker/cloudbuild.yaml ./
 
+
+
 steps:
+  # Optionally cache base image
+  # ref. https://cloud.google.com/cloud-build/docs/speeding-up-builds
+  # ref. https://github.com/GoogleCloudPlatform/cloud-builders/issues/253
+- name: 'gcr.io/cloud-builders/docker'
+  entrypoint: 'bash'
+  args: [ '-c', 'docker pull gcr.io/$PROJECT_ID/forseti-base:latest || exit 0']
+  waitFor: ['-']
+  id: pull-base-for-cache
+
 - name: 'gcr.io/cloud-builders/docker'
   args:
   - 'build'
-  - '--file=scripts/docker/base'
+  - '--file=install/docker/base'
   - '--tag=gcr.io/$PROJECT_ID/forseti-base'
+  - '--cache-from'
+  - 'gcr.io/$PROJECT_ID/forseti-base:latest'
   - '.'
-  waitFor: ['-']
+  waitFor: ['pull-base-for-cache']
   id: base
 
 - name: 'gcr.io/cloud-builders/docker'
   args:
   - 'build'
-  - '--file=scripts/docker/forseti'
+  - '--file=install/docker/forseti'
   - '--build-arg=BASE_IMAGE=gcr.io/$PROJECT_ID/forseti-base'
   - '--tag=gcr.io/$PROJECT_ID/forseti'
   - '.'
   waitFor: ['base']
   id: forseti
+
+# Uncomment below to include optional unit tests in the build process
+#- name: 'gcr.io/cloud-builders/docker'
+#  args: ['run', 'gcr.io/$PROJECT_ID/forseti', 'python', '-m', 'unittest', 'discover', '--verbose', '-s', '.', '-p', '*_test.py']
+#  waitFor: ['forseti']
+#  id: unittest
 
 images: ['gcr.io/$PROJECT_ID/forseti-base', 'gcr.io/$PROJECT_ID/forseti']
