--- a/install/scripts/forseti.server.service.template.yaml
+++ b/install/scripts/forseti.server.service.template.yaml
@@ -10,8 +10,9 @@
 # distributed under the License is distributed on an "AS IS" BASIS,
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
-# limitations under the License.apiVersion: v1
+# limitations under the License.
 
+apiVersion: v1
 kind: Service
 metadata:
   name: forseti-server-service
