--- a/rules/groups_settings_rules.yaml
+++ b/rules/groups_settings_rules.yaml
@@ -43,20 +43,14 @@
 rules:
   - name: rule abc
     mode: whitelist
-    resource_ids:
+    groups_emails:
       - '*'
     settings:
-      - allowExternalMembers: True
-      - whoCanAdd: "ALL_MANAGERS_CAN_ADD"
-  - name: rule xyz
-    mode: blacklist
-    resource_ids:
-      - 'my_group@gmail.com'
-    settings:
-      - whoCanJoin: "INVITED_CAN_JOIN"
-      - whoCanViewMembership: "ALL_IN_DOMAIN_CAN_VIEW"
-      - whoCanViewGroup: "ALL_IN_DOMAIN_CAN_VIEW"
-      - whoCanInvite: "ALL_MANAGERS_CAN_INVITE"
-      - whoCanLeaveGroup: "ALL_MEMBERS_CAN_LEAVE"
-
-
+      allowExternalMembers: False
+  # - name: rule xyz
+  #   mode: blacklist
+  #   groups_emails:
+  #     - '*'
+  #   settings:
+  #     whoCanAdd: "ALL_MANAGERS_CAN_ADD"
+  #     whoCanInvite: "ALL_MANAGERS_CAN_INVITE"
