--- a/configs/server/forseti_conf_server.yaml.in
+++ b/configs/server/forseti_conf_server.yaml.in
@@ -31,6 +31,7 @@ inventory:
     #    - "folders/45678"
     #    - "projects/98765"
     #    - "organizations/56789"
+    composite_root_resources: {COMPOSITE_ROOT_RESOURCES}
 
     # gsuite access
     domain_super_admin_email: {DOMAIN_SUPER_ADMIN_EMAIL}
