--- a/rules/groups_settings_rules.yaml
+++ b/rules/groups_settings_rules.yaml
@@ -15,30 +15,20 @@
 # Rule Keys:
 # name: The unique name describing the rule
 # mode: Depending on whether you want to allow or block in a given situation,
+#      whitelist: violates when any specified propery:value combination
+#                 doesn't match
+#      blacklist: violates when all specified propery:value combinations
+#                 match
 # mode can be whitelist or blacklist
-# resource: A mapping of resources that this rule applies to.
-#  * type: The type of resource, can be organization, folder, or project.
-#  * resource_ids: A list of one or more numeric ids to match, or '*' for all.
-# key: The configuration of cryptokey that this rule applies to.
-#  * name: The unique name describing the cryptographic key. '*' is also
-# supported to capture all the keys in a organization/folder/project.
-#  * state: Denotes the state of a key version. Optional, if not included
-# state is not compared.
-#  * protection_level: Indicates whether cryptographic operations are performed
-# in software or in Hardware Security Module (HSM). Optional, if not provided
-# protection_level is not
-# compared.
-#  * algorithm: Denotes the algorithm of that key. Optional, if not provided
-# algorithm is not compared.
-#  * purpose: Defines the cryptographic abilities of the key. Optional, if not
-# provided purpose is not compared.
-#  * rotation_range: Denotes the range of the nextRotationTime of multiple keys
-# in a project. Optional, if not provided nextRotationTime of cryptographic keys
-# is not compared.
-#  * rotation_period: Denotes the time period to rotate a key. Optional, if
-# not provided rotation_range is not compared.
-#  * labels: Allows you to group your keys. Optional, if not provided labels are
-# not compared.
+# group_emails: unique emails matching gsuite groups
+# settings: settings rules.  Supported settings are
+#           - whoCanAdd
+#           - whoCanJoin
+#           - whoCanViewMembership
+#           - whoCanViewGroup
+#           - whoCanInvite
+#           - allowExternalMembers
+#           - whoCanLeaveGroup
 
 rules:
   - name: rule abc
