--- a/rules/groups_settings_rules.yaml
+++ b/rules/groups_settings_rules.yaml
@@ -33,19 +33,23 @@
 #           - whoCanLeaveGroup
 
 rules:
-  - name: rule abc
+  - name: default
     mode: whitelist
-    only_iam_groups: False
+    only_iam_groups: True
     groups_emails:
-      - 'accountlink_bb-users-dp-gcp@henrychang.mygbiz.com'
-      - 'accountlink_tfe-inc@henrychang.mygbiz.com'
+      - '*'
     settings:
+      allowExternalMembers: True
+      whoCanJoin: "INVITED_CAN_JOIN"
+      whoCanInvite: "ALL_MANAGERS_CAN_INVITE"
+      whoCanAdd: "ALL_MANAGERS_CAN_ADD"
       allowExternalMembers: False
-  - name: rule xyz
-    mode: blacklist
-    only_iam_groups: False
+      whoCanLeaveGroup: "ALL_MANAGERS_CAN_LEAVE"
+  - name: Recommended for groups only used for IAM and not for email
+    mode: whitelist
+    only_iam_groups: True
     groups_emails:
-      - 'accountlink_bb-users-dp-gcp@henrychang.mygbiz.com'
-      - 'accountlink_tfe-inc@henrychang.mygbiz.com'
+      - '*'
     settings:
-      whoCanJoin: "ALL_IN_DOMAIN_CAN_JOIN"
+      whoCanViewMembership: "ALL_IN_DOMAIN_CAN_VIEW"
+      whoCanViewGroup: "ALL_MANAGERS_CAN_VIEW"
