answered change reqs

--- a/configs/server/forseti_conf_server.yaml.sample
+++ b/configs/server/forseti_conf_server.yaml.sample
@@ -272,6 +272,18 @@ notifier:
                 data_format: json  # slack only supports json
                 webhook_url: ''
 
+        - resource: groups_settings_violations
+          should_notify: true
+          notifiers:
+            # Email violations
+            - name: email_violations
+            # Upload violations to GCS.
+            - name: gcs_violations
+              configuration:
+                data_format: csv
+                # gcs_path should begin with "gs://"
+                gcs_path: gs://{FORSETI_BUCKET}/scanner_violations
+
     violation:
       cscc:
         enabled: true
