--- a/rules/groups_settings_rules.yaml
+++ b/rules/groups_settings_rules.yaml
@@ -31,9 +31,10 @@
 #           - whoCanInvite
 #           - allowExternalMembers
 #           - whoCanLeaveGroup
+#https://developers.google.com/admin-sdk/groups-settings/v1/reference/groups
 
 rules:
-  - name: default
+  - name: All groups with iam policies should have all of these settings
     mode: whitelist
     only_iam_groups: True
     groups_emails:
@@ -45,11 +46,11 @@ rules:
       whoCanAdd: "ALL_MANAGERS_CAN_ADD"
       allowExternalMembers: False
       whoCanLeaveGroup: "ALL_MANAGERS_CAN_LEAVE"
-  - name: Recommended for groups only used for IAM and not for email
-    mode: whitelist
-    only_iam_groups: True
-    groups_emails:
-      - '*'
-    settings:
-      whoCanViewMembership: "ALL_IN_DOMAIN_CAN_VIEW"
-      whoCanViewGroup: "ALL_MANAGERS_CAN_VIEW"
+  # - name: Recommended for groups only used for IAM and not for email
+  #   mode: whitelist
+  #   only_iam_groups: True
+  #   groups_emails:
+  #     - '*'
+  #   settings:
+  #     whoCanViewMembership: "ALL_IN_DOMAIN_CAN_VIEW"
+  #     whoCanViewGroup: "ALL_MANAGERS_CAN_VIEW"
