Created and referenced assets_pb2.py

--- a/.gitignore
+++ b/.gitignore
@@ -14,8 +14,7 @@
 # Compiled protobuf
 *_pb2.py
 *_pb2_grpc.py
-
-# Exclude compiled protobuf in the validator util folder
+!google/cloud/asset/v1/*_pb2.py
 !google/cloud/forseti/scanner/scanners/config_validator_util/*_pb2.py
 !google/cloud/forseti/scanner/scanners/config_validator_util/*_pb2_grpc.py
 
