--- a/configs/server/forseti_conf_server.yaml.sample
+++ b/configs/server/forseti_conf_server.yaml.sample
@@ -287,16 +287,8 @@ notifier:
     violation:
       cscc:
         enabled: true
-        mode: api
-        # Alpha API
-        organization_id: organizations/1234567890
-        # gcs_path should begin with "gs://"
-        gcs_path:
-        # Beta API
-        # Cloud SCC Beta API uses a new source_id.  It is unique per
+        # Cloud SCC API uses a new source_id. It is unique per
         # organization and must be generated via a self-registration process.
-        # If source_id is used, then it will activate the Beta API,
-        # and the Beta API will take precedence over the Alpha API.
         # The format is: organizations/ORG_ID/sources/SOURCE_ID
         source_id:
 
