Config validator scanner (#2632)
* Added GCV scanner class.

* Added violation message column to VIOLATION table

* updated config file and violation map

* Added proto and generated files.

* Added retry exceptions for grpc.

* Updated gcv scanner

* updates

* updates

* Added customized errors

* updates

* Added cai resource name & type columns to inventory and resource tables.

* Updated GCV scanner, added module docs for all the files.

* Updated message -> violation_message in gcv scanner.

* pylint updates

* Added stub GCV service.

* Updated based on an offline discussion with Andrew.

* updates

* Updates

* updates

* updated unit tests

* Renamed GCV to Config Validator

* Included config validator binary.

* Renamed folder external_dependencies -> external-dependencies.

* Updated to use struct.value in validator asset.

* updates

* updated startup scripts.

* renamed config validator service

* Updating validator client with the most recent validator pb2.

* updates

* Reordered config validator scanner in server config yaml file.

* Removed .pyc in config validator util folder.

* Added exceptions when deleting pb2 files.

* Reordered config validator violation in violation_map.py

* Refactored retrieve to handle resources and iam policies differently to avoid confusion due to the limitation of what we can determine from the config validator violation.

* updated validator binary

* Updated config validator binary.

* Updated the permission of the config validaotr binary.

* updates

* updates

* updated validator pb2 with the latest version.

* updates

* Skip iam resources for now.

* Clean up empty fields in proto.

* updates

* Filling empty proto fields with null values.

* updates

* Autofill None to empty values in a dict.

* updated log message.

* updates

* Updating the config validator binary to the latest version.

* Wrapping resource data

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,9 @@
 # Compiled protobuf
 *_pb2.py
 *_pb2_grpc.py
+!google/cloud/asset/v1/*_pb2.py
+!google/cloud/forseti/scanner/scanners/config_validator_util/*_pb2.py
+!google/cloud/forseti/scanner/scanners/config_validator_util/*_pb2_grpc.py
 
 # Miscellaneous
 .DS_Store
