--- a/rules/role_rules.yaml
+++ b/rules/role_rules.yaml
@@ -13,8 +13,8 @@
 # limitations under the License.
 
 # rules:
-#   - role_name: "BigqueryViewer"
-#     name: "The role BigqueryViewer contains exactly the following 3 permissions"
+#   - name: "The role BigqueryViewer contains exactly the following 3 permissions"
+#     role_name: "BigqueryViewer"
 #     permissions:
 #     - "bigquery.datasets.get"
 #     - "bigquery.tables.get"
@@ -22,16 +22,16 @@
 #     resource:
 #     - type: project
 #       resource_ids: ['*']
-#   - role_name: "CloudsqlViewer"
-#     name: "CloudsqlViewer on def-project-1 contains the following 2 backupruns permissions"
+#   - name: "CloudsqlViewer on def-project-1 contains exactly the following 2 backupruns permissions"
+#     role_name: "CloudsqlViewer"
 #     permissions:
 #     - "cloudsql.backupRuns.get"
 #     - "cloudsql.backupRuns.list"
 #     resource:
 #     - type: project
 #       resource_ids: ['def-project-1']
-#   - role_name: "CloudsqlViewer"
-#     name: "CloudsqlViewer on def-project-2 contains the following 2 databases permissions"
+#   - name: "CloudsqlViewer on def-project-2 contains exactly the following 2 databases permissions"
+#     role_name: "CloudsqlViewer"
 #     permissions:
 #     - "cloudsql.databases.get"
 #     - "cloudsql.databases.list"
