--- a/rules/service_account_key_rules.yaml
+++ b/rules/service_account_key_rules.yaml
@@ -29,3 +29,11 @@ rules:
         resource_ids:
           - '*'
     max_age: 100 # days
+
+# CIS Example
+#  - name: 'CIS_GCP_1.6 Ensure Service Account Keys Rotated Every 90 Days'
+#    resource:
+#      - type: organization
+#        resource_ids:
+#          - '*'
+#    max_age: 90 # days
