Add support for RegionBackendService (#2791)
* work in progress

* adding region backend service to inventory

* Added tests

* alpha sorted cai resources

* fix test

--- a/configs/server/forseti_conf_server.yaml.in
+++ b/configs/server/forseti_conf_server.yaml.in
@@ -155,6 +155,7 @@ inventory:
         #    - compute.googleapis.com/License
         #    - compute.googleapis.com/Network
         #    - compute.googleapis.com/Project
+        #    - compute.googleapis.com/RegionBackendService
         #    - compute.googleapis.com/Route
         #    - compute.googleapis.com/Router
         #    - compute.googleapis.com/Snapshot
