--- a/configs/server/forseti_conf_server.yaml.in
+++ b/configs/server/forseti_conf_server.yaml.in
@@ -183,6 +183,14 @@ inventory:
         #    - spanner.googleapis.com/Instance
         #    - sqladmin.googleapis.com/Instance
         #    - storage.googleapis.com/Bucket
+        #    - container.googleapis.com/Cluster
+        #    - k8s.io/Node
+        #    - k8s.io/Pod
+        #    - k8s.io/Namespace,
+        #    - rbac.authorization.k8s.io/Role,
+        #    - rbac.authorization.k8s.io/RoleBinding,
+        #    - rbac.authorization.k8s.io/ClusterRole,
+        #    - rbac.authorization.k8s.io/ClusterRoleBinding
 
     # Number of days to retain inventory data:
     #  -1 : (default) keep all previous data forever
